package bwl.oo.paket10;

public class Unternehmen {
  
  public String name;
  public int eintragHandelsRegister;

}

